[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/GUI/GameOverPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/GUI/PauseScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=7]
[ext_resource path="res://Src/GUI/HUD.tscn" type="PackedScene" id=10]

[node name="Game" type="Spatial"]
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.541605, 0.840633, 0, -0.840633, 0.541605, 0.633, 14.121, 14.606 )
current = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 2.18822, 0 )

[node name="Customers" type="Node" parent="."]

[node name="HUD" parent="." instance=ExtResource( 10 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="StartGameTimer" type="Timer" parent="."]
autostart = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.0669873, -0.965926, 0.25, -0.25, 0.258819, 0.933013, -0.965926, -1.58397e-08, -0.258819, 17, 6, 0 )
light_color = Color( 0.933333, 0.937255, 0.305882, 1 )
light_energy = 0.31
shadow_enabled = true

[node name="GameOverPanel" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PauseScene" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="StartGameTimer" to="." method="_on_StartGameTimer_timeout"]
